--- a/shop.html
+++ b/shop.html
@@ -286,10 +286,7 @@
             <div class="col-xl-9">
               <div class="shop-grid-list">
                 <div class="shop-products">
-                <div id="root2" class="product-item  d-flex flex-wrap">
-
-
-                </div>
+              
                   <div class="shop-products_top mini-tab-title underline">
                     <div class="row align-items-center">
                       <div class="col-6 col-xl-4">
@@ -315,7 +312,11 @@
                   <div class="shop-products_bottom">
                     <div class="row no-gutters-sm">
                       <div class="col-6 col-md-4">
-                        <div class="product">
+                        <div id="root2" class="product-item  d-flex flex-wrap">
+
+
+                        </div>
+                        <!--<div class="product">
                           <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product01.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
                           </div>
@@ -340,9 +341,9 @@
                             <h3 class="product-price"> 
                               <del>NGR 35.00</del>NGR 14.00
                             </h3>
-                              <!-- WRITE JAVASCRIPT FOR ADD TO CART FUNCTION-->
+                              <!--WRITE JAVASCRIPT FOR ADD TO CART FUNCTION-->
 
-                            <button class="add-to-cart normal-btn outline">Add to Cart</button>
+                            <!--<button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
                           </div>
                         </div>
@@ -375,7 +376,7 @@
                             </h3>
                               <!-- WRITE JAVASCRIPT FOR ADD TO CART FUNCTION-->
                               
-                            <button class="add-to-cart normal-btn outline">Add to Cart</button>
+                            <!--<button class="add-to-cart normal-btn outline">Add to Cart</button>
                             <button class="add-to-compare normal-btn outline">+ Add to Compare</button>
                           </div>
                         </div>
@@ -691,7 +692,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="shop-pagination">
                     <ul>
                       <li>
