--- a/shop3.html
+++ b/shop3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Shop</title>
+    <title>TUBERS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
@@ -313,7 +313,7 @@
                     <div id="root5" class="product-item  d-flex flex-wrap">
 
 
-                        </div>
+                    </div>
                         <!--<div class="product">
                           <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product01.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
