--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+    <script type="text/javascript" src="js/jquery.shop.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
     
