--- a/index.html
+++ b/index.html
@@ -461,6 +461,17 @@
 
                 </div>
 
+
+
+
+                  <!--<form class="add-to-cart" action="shop_shop_cart.html" method="post">
+                    <div>
+                      <label for="qty-1">Quantity</label>
+                      <input type="text" name="qty-1" id="qty-1" class="qty" value="1" />
+                    </div>
+                    <p><input type="submit" value="Add to cart" class="btn" /></p>
+                  </form>-->
+
                   <!--<div class="col-12 text-center order-5">
                     <div class="d-flex justify-content-center" id="event-countdown"></div>
                   </div>-->
