--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
       </div>
     </header>
     <!-- End header-->
+
     <div class="slider">
       <div class="full-fluid">
         <div class="slider_wrapper">
@@ -317,63 +318,65 @@
 
     <div class="items-category">
       <div class="container">
-        <h4 class="title mx-auto">Product Categories</h4>
-
-
-
-
-
-
         <div class="row">
-          <div class="col-12 col-sm-6 col-md-3"><a
-              class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html"
-              style="background-image: url(assets/images/homepage01/item_category_1.png)">
-              <div class="categories-img"><img
+          <div class="col-12 text-center">
+            <h1 class="title mx-auto">Product Categories</h1>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+              <div class="categories-img">
+                <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
-                  alt=""></div>
+                  alt="BAKING INGREDIENTS">
+              </div>
               <h2>BAKING INGREDIENTS</h2>
               <p>38 Items</p>
-            </a></div>
-          <div class="col-12 col-sm-6 col-md-3"><a
-              class="product-item d-flex flex-column align-items-center justify-content-center" href="shop1.html"
-              style="background-image: url(assets/images/homepage01/item_category_2.png)">
-              <div class="categories-img"><img
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop1.html">
+              <div class="categories-img">
+                <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FAyoola%20Poundo%20yam%20.jpg?alt=media&token=0ed5878b-a26c-4166-a0ab-fd4dfd7f54f5"
-                  alt=""></div>
+                  alt="FLOURS">
+              </div>
               <h2>FLOURS</h2>
               <p>10 Items</p>
-            </a></div>
-          <div class="col-12 col-sm-6 col-md-3"><a
-              class="product-item d-flex flex-column align-items-center justify-content-center" href="shop2.html"
-              style="background-image: url(assets/images/homepage01/item_category_3.png)">
-              <div class="categories-img"><img
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop2.html">
+              <div class="categories-img">
+                <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBitter%20leaf.jpg?alt=media&token=e2a0f4d9-f66a-416e-bb51-8487de6d57cc"
-                  alt=""></div>
+                  alt="VEGETABLES/LEAFY">
+              </div>
               <h2>VEGETABLES/LEAFY</h2>
               <p>10 Items</p>
-            </a></div>
-          <div class="col-12 col-sm-6 col-md-3"><a
-              class="product-item d-flex flex-column align-items-center justify-content-center" href="shop3.html"
-              style="background-image: url(assets/images/homepage01/item_category_4.png)">
-              <div class="categories-img"><img
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop3.html">
+              <div class="categories-img">
+                <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCassava%202.jpg?alt=media&token=f87c5f65-09fb-4d8e-93b8-c6da10d8dd95"
-                  alt=""></div>
+                  alt="TUBERS">
+              </div>
               <h2>TUBERS</h2>
               <p>36 Items</p>
-            </a></div>
-
-          <div class="col-12 col-sm-6 col-md-3"><a
-              class="product-item d-flex flex-column align-items-center justify-content-center" href="shop4.html"
-              style="background-image: url(assets/images/homepage01/item_category_4.png)">
-              <div class="categories-img"><img
+            </a>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop4.html">
+              <div class="categories-img">
+                <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCat%20fish%202.jpg?alt=media&token=45ab4c02-4c40-4e87-b35e-aa42b9047de4"
-                  alt=""></div>
+                  alt="MEAT AND FISH/FISH">
+              </div>
               <h2>MEAT AND FISH/FISH</h2>
               <p>24 Items</p>
-            </a></div>
-
-
-
+            </a>
+          </div>
         </div>
       </div>
     </div>
