--- a/index.html
+++ b/index.html
@@ -56,37 +56,44 @@
       <nav class="navigation d-flex align-items-center">
         <div class="container">
           <div class="row">
-            <div class="col-2"><a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a></div>
+            <div class="col-2">
+              <a class="logo" href="index.html"><img src="assets/images/logo.png" alt=""></a>
+            </div>
             <div class="col-8">
               <div class="navgition-menu d-flex align-items-center justify-content-center">
                 <ul class="mb-0">
-                  <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a>
-
+                  <li class="toggleable">
+                    <a class="menu-item active" href="index.html">Home</a>
                   </li>
-                  <li class="toggleable"> <a class="menu-item" href="shop.html">Shop</a>
-
+                  <li class="toggleable">
+                    <a class="menu-item" href="shop.html">Shop</a>
                   </li>
-
-                  <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
+                  <li class="toggleable">
+                    <a class="menu-item" href="javascript:void()">Pages</a>
                     <ul class="sub-menu">
                       <li><a href="login.html">login</a></li>
                       <li><a href="register.html">register</a></li>
                       <li><a href="FAQ.html">FAQ</a></li>
-
                       <li><a href="contact_us.html">contact us</a></li>
-
                     </ul>
                   </li>
-                  <li class="toggleable"><a class="menu-item" href="about_us.html">About us</a></li>
+                  <li class="toggleable">
+                    <a class="menu-item" href="about_us.html">About us</a>
+                  </li>
                 </ul>
               </div>
             </div>
             <div class="col-2">
               <div class="product-function d-flex align-items-center justify-content-end">
-                <div id="wishlist"><a class="function-icon icon_heart_alt" href="javascript:void()"></a>
+                <div id="wishlist">
+                  <a class="function-icon icon_heart_alt" href="javascript:void()"></a>
                 </div>
-                <div id="cart"><a class="function-icon fa fa-shopping-cart"
-                    href="javascript:void()"><span>Welcome</span></a></div>
+                <div id="cartButton" class="function-icon hover">
+                  <i class="fa fa fa-shopping-cart"></i>
+                  <sup style="top: -.5em">
+                    <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                  </sup>
+                </div>
               </div>
             </div>
           </div>
@@ -550,6 +557,9 @@
 
   <!-- Utils -->
   <script src="js/utils/api-request.js"></script>
+
+  <!-- App Logic -->
+  <script src="js/app.js"></script>
 
   <!-- Services -->
   <script src="js/services/featuredProducts.js"></script>
