--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div id="wishlist">
                   <a class="function-icon icon_heart_alt" href="javascript:void()"></a>
                 </div>
-                <div id="cartButton" class="function-icon hover">
+                <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover">
                   <i class="fa fa fa-shopping-cart"></i>
                   <sup style="top: -.5em">
                     <span id="cartButtonBadge" class="my-badge badge-success">0</span>
